Frontend comments display and create, some fixes
Created handler for submitting comment
Created comment component for displaying comment
Changed post styling
Added location to like button
Changed laoding component width
Removed scrollbar
Fixed app width
Renamed App component to HomePage and SIgn-in to SignInPage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,12 @@
 #root {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
 }
